univarie et multivarié annalyse

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -9,5 +9,5 @@ db_password = "12345qwerty"
 [my_cool_secrets]
 things_i_like = ["Streamlit", "Python"]
 [config]
-API_URL =   "http://localhost:8000"
+API_URL =   "http://api-dashboard:5000"
 THRESHOLD   =   "0.54"
